Return optional `openvm-stark-sdk` dependency

--- a/crates/vm/Cargo.toml
+++ b/crates/vm/Cargo.toml
@@ -17,7 +17,7 @@ openvm-circuit-primitives = { workspace = true }
 openvm-circuit-primitives-derive = { workspace = true }
 openvm-circuit-derive = { workspace = true }
 openvm-instructions = { workspace = true }
-openvm-stark-sdk = { workspace = true }
+openvm-stark-sdk = { workspace = true, optional = true }
 
 itertools.workspace = true
 tracing.workspace = true
@@ -61,12 +61,12 @@ default = ["parallel", "jemalloc"]
 parallel = [
     "openvm-stark-backend/parallel",
     "dashmap/rayon",
-    "openvm-stark-sdk/parallel",
+    "openvm-stark-sdk?/parallel",
 ]
 metrics = [
     "dep:metrics",
     "openvm-stark-backend/metrics",
-    "openvm-stark-sdk/metrics",
+    "openvm-stark-sdk?/metrics",
 ]
 # turns on more invasive profiling for fine-grained guest metrics
 perf-metrics = ["metrics"]
@@ -74,13 +74,14 @@ perf-metrics = ["metrics"]
 basic-memory = []
 # turns on stark-backend debugger in all proofs
 stark-debug = []
-test-utils = []
+test-utils = ["openvm-stark-sdk"]
 # performance features:
 mimalloc = ["openvm-stark-backend/mimalloc"]
 jemalloc = ["openvm-stark-backend/jemalloc"]
 jemalloc-prof = ["openvm-stark-backend/jemalloc-prof"]
-nightly-features = ["openvm-stark-sdk/nightly-features"]
+nightly-features = ["openvm-stark-sdk?/nightly-features"]
 cuda = [
+    "openvm-stark-sdk", # for BabyBearPoseidon2Config
     "openvm-circuit-primitives/cuda",
     "dep:openvm-cuda-common",
     "dep:openvm-cuda-backend",
