--- a/benchmarks/utils/Cargo.toml
+++ b/benchmarks/utils/Cargo.toml
@@ -22,19 +22,21 @@ bitcode = { workspace = true, optional = true }
 openvm-circuit = { workspace = true, optional = true }
 openvm-continuations = { workspace = true, optional = true }
 openvm-native-circuit = { workspace = true, optional = true }
+openvm-native-recursion = { workspace = true, optional = true }
 openvm-sdk = { workspace = true, optional = true }
 openvm-stark-sdk = { workspace = true, optional = true }
 
 [dev-dependencies]
 
 [features]
-default = []
+default = ["generate-fixtures"]
 build-elfs = []
 generate-fixtures = [
     "dep:bitcode",
     "dep:openvm-circuit",
     "dep:openvm-continuations",
     "dep:openvm-native-circuit",
+    "dep:openvm-native-recursion",
     "dep:openvm-sdk",
     "dep:openvm-stark-sdk",
 ]
