fix: nextest --run-ignored

--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -104,4 +104,4 @@ jobs:
         working-directory: crates/sdk
         if: ${{ github.event_name == 'push' }}
         run: |
-          cargo nextest run --cargo-profile=fast --features parallel,evm-verify --ignored test_static_verifier_custom_pv_handler
+          cargo nextest run --cargo-profile=fast --features parallel,evm-verify --run-ignored=only test_static_verifier_custom_pv_handler
