--- a/crates/sdk/Cargo.toml
+++ b/crates/sdk/Cargo.toml
@@ -18,6 +18,8 @@ openvm-ecc-circuit = { workspace = true }
 openvm-ecc-transpiler = { workspace = true }
 openvm-keccak256-circuit = { workspace = true }
 openvm-keccak256-transpiler = { workspace = true }
+openvm-memcpy-circuit = { workspace = true }
+openvm-memcpy-transpiler = { workspace = true }
 openvm-sha256-circuit = { workspace = true }
 openvm-sha256-transpiler = { workspace = true }
 openvm-pairing-circuit = { workspace = true }
