--- a/extensions/rv32im/tests/Cargo.toml
+++ b/extensions/rv32im/tests/Cargo.toml
@@ -25,3 +25,4 @@ strum.workspace = true
 [features]
 default = ["parallel"]
 parallel = ["openvm-circuit/parallel"]
+cuda = ["openvm-rv32im-circuit/cuda"]
