--- a/.github/workflows/extension-tests.yml
+++ b/.github/workflows/extension-tests.yml
@@ -70,32 +70,33 @@ jobs:
       - uses: taiki-e/install-action@nextest
 
       - name: Check CUDA status and set environment variables
-        if: matrix.extension.family == 'g6.2xlarge'
+        if: contains(matrix.extension.family, 'g6')
         run: |
           nvidia-smi
           nvidia-smi -L
           nvcc --version
 
-          echo "NEXTEST_ENV=CUDA_OPT_LEVEL=1" >> $GITHUB_ENV
           echo "FEATURE_ARGS=--features=cuda" >> $GITHUB_ENV
+          echo "CIRCUIT_TEST_ENV=CUDA_OPT_LEVEL=1" >> $GITHUB_ENV
+          echo "CIRCUIT_TEST_FILTER=cuda" >> $GITHUB_ENV
 
       - name: Run ${{ matrix.extension.name }} circuit crate tests
         working-directory: extensions/${{ matrix.extension.path }}/circuit
-        run: ${{ env.NEXTEST_ENV }} cargo nextest run --cargo-profile=fast ${{ env.FEATURE_ARGS }} --test-threads=32
+        run: ${{ env.CIRCUIT_TEST_ENV }} cargo nextest run ${{ env.CIRCUIT_TEST_FILTER }} --cargo-profile=fast ${{ env.FEATURE_ARGS }} --test-threads=32 --no-tests=pass
 
       - name: Run ${{ matrix.extension.name }} guest crate tests
-        if: hashFiles(format('extensions/{0}/guest', matrix.extension.path)) != ''
+        if: ${{ !contains(matrix.extension.family, 'g6') && hashFiles(format('extensions/{0}/guest', matrix.extension.path)) != '' }}
         working-directory: extensions/${{ matrix.extension.path }}/guest
         run: |
-          FEATURE_GUEST_ARGS=""
+          GUEST_FEATURE_ARGS=""
           if [[ "${{ matrix.extension.name }}" == "pairing" ]]; then
-            FEATURE_GUEST_ARGS="--features=bn254,bls12_381,halo2curves"
+            GUEST_FEATURE_ARGS="--features=bn254,bls12_381,halo2curves"
           fi
-          ${{ env.NEXTEST_ENV }} cargo nextest run --cargo-profile=fast ${{ env.FEATURE_ARGS }} $FEATURE_GUEST_ARGS --no-tests=pass
+          cargo nextest run --cargo-profile=fast $GUEST_FEATURE_ARGS --no-tests=pass
 
       - name: Run ${{ matrix.extension.name }} integration tests
         if: hashFiles(format('extensions/{0}/tests', matrix.extension.path)) != ''
         working-directory: extensions/${{ matrix.extension.path }}/tests
         run: |
           rustup component add rust-src --toolchain nightly-2025-02-14
-          ${{ env.NEXTEST_ENV }} cargo nextest run --cargo-profile=fast ${{ env.FEATURE_ARGS }} --profile=heavy --no-tests=pass
+          cargo nextest run --cargo-profile=fast ${{ env.FEATURE_ARGS }} --profile=heavy --no-tests=pass
