--- a/extensions/algebra/tests/Cargo.toml
+++ b/extensions/algebra/tests/Cargo.toml
@@ -15,6 +15,7 @@ openvm-transpiler.workspace = true
 openvm-algebra-transpiler.workspace = true
 openvm-algebra-circuit.workspace = true
 openvm-rv32im-transpiler.workspace = true
+openvm-memcpy-transpiler.workspace = true
 openvm-toolchain-tests = { path = "../../../crates/toolchain/tests" }
 openvm-ecc-circuit.workspace = true
 eyre.workspace = true
