--- a/guest-libs/ff_derive/Cargo.toml
+++ b/guest-libs/ff_derive/Cargo.toml
@@ -35,6 +35,7 @@ openvm-transpiler = { workspace = true }
 openvm-algebra-transpiler = { workspace = true }
 openvm-algebra-circuit = { workspace = true }
 openvm-rv32im-transpiler = { workspace = true }
+openvm-memcpy-transpiler = { workspace = true }
 openvm-toolchain-tests = { workspace = true }
 
 eyre = { workspace = true }
