--- a/guest-libs/k256/Cargo.toml
+++ b/guest-libs/k256/Cargo.toml
@@ -38,6 +38,7 @@ openvm-ecc-circuit.workspace = true
 openvm-sha256-circuit.workspace = true
 openvm-sha256-transpiler.workspace = true
 openvm-rv32im-transpiler.workspace = true
+openvm-memcpy-transpiler = { workspace = true }
 openvm-toolchain-tests.workspace = true
 
 openvm-stark-backend.workspace = true
