--- a/guest-libs/keccak256/Cargo.toml
+++ b/guest-libs/keccak256/Cargo.toml
@@ -20,6 +20,7 @@ openvm-transpiler = { workspace = true }
 openvm-keccak256-transpiler = { workspace = true }
 openvm-keccak256-circuit = { workspace = true }
 openvm-rv32im-transpiler = { workspace = true }
+openvm-memcpy-transpiler = { workspace = true }
 openvm-toolchain-tests = { workspace = true }
 eyre = { workspace = true }
 
