--- a/guest-libs/p256/Cargo.toml
+++ b/guest-libs/p256/Cargo.toml
@@ -35,6 +35,7 @@ openvm-ecc-circuit.workspace = true
 openvm-sha256-circuit.workspace = true
 openvm-sha256-transpiler.workspace = true
 openvm-rv32im-transpiler.workspace = true
+openvm-memcpy-transpiler.workspace = true
 openvm-toolchain-tests.workspace = true
 
 openvm-stark-backend.workspace = true
