--- a/crates/vm/Cargo.toml
+++ b/crates/vm/Cargo.toml
@@ -49,6 +49,7 @@ libc.workspace = true
 
 [dev-dependencies]
 test-log.workspace = true
+test-case.workspace = true
 
 openvm-circuit = { workspace = true, features = ["test-utils"] }
 openvm-stark-sdk.workspace = true
