--- a/crates/vm/Cargo.toml
+++ b/crates/vm/Cargo.toml
@@ -50,7 +50,7 @@ openvm-native-compiler.workspace = true
 openvm-rv32im-transpiler.workspace = true
 
 [features]
-default = ["parallel", "jemalloc"]
+default = ["parallel", "jemalloc", "tco"]
 parallel = [
     "openvm-stark-backend/parallel",
     "dashmap/rayon",
