feat: rv32im tco without become keyword
`become` keyword was causing some corruption and not passing references
properly between calls.

--- a/extensions/rv32im/tests/Cargo.toml
+++ b/extensions/rv32im/tests/Cargo.toml
@@ -23,5 +23,6 @@ serde = { workspace = true, features = ["alloc"] }
 strum.workspace = true
 
 [features]
-default = ["parallel"]
+default = ["parallel", "tco"]
 parallel = ["openvm-circuit/parallel"]
+tco = ["openvm-rv32im-circuit/tco"]
