feat: gpu test builder (#2007)
Towards INT-4700
Migrates GpuTestBuilder with related testing cuda files, made a new
trait called `TestBuilder` to be used in `set_and_execute` functions to
make them general.
Moved `memory`, `phantom`, and `public` values system gpu tests to the
corresponding cpu test files so that they can share some code

--- a/crates/vm/Cargo.toml
+++ b/crates/vm/Cargo.toml
@@ -49,6 +49,7 @@ libc.workspace = true
 
 [dev-dependencies]
 test-log.workspace = true
+test-case.workspace = true
 
 openvm-circuit = { workspace = true, features = ["test-utils"] }
 openvm-stark-sdk.workspace = true
@@ -85,4 +86,9 @@ cuda = [
     "dep:openvm-cuda-common",
     "dep:openvm-cuda-backend",
     "dep:openvm-cuda-builder",
+]
+touchemall = [
+    "cuda", 
+    "openvm-circuit-primitives/touchemall",
+    "openvm-cuda-backend/touchemall",
 ]
