--- a/extensions/algebra/circuit/Cargo.toml
+++ b/extensions/algebra/circuit/Cargo.toml
@@ -7,6 +7,11 @@ edition.workspace = true
 homepage.workspace = true
 repository.workspace = true
 
+[features]
+default = ["jemalloc", "tco"]
+tco = ["openvm-circuit/tco"]
+jemalloc = ["openvm-circuit/jemalloc"]
+
 [dependencies]
 openvm-circuit-primitives = { workspace = true }
 openvm-circuit-primitives-derive = { workspace = true }
