--- a/extensions/ecc/circuit/Cargo.toml
+++ b/extensions/ecc/circuit/Cargo.toml
@@ -9,7 +9,7 @@ repository.workspace = true
 
 [features]
 default = ["jemalloc", "tco"]
-tco = ["openvm-circuit/tco"]
+tco = ["openvm-algebra-circuit/tco"]
 jemalloc = ["openvm-circuit/jemalloc"]
 
 [dependencies]
