--- a/extensions/native/circuit/Cargo.toml
+++ b/extensions/native/circuit/Cargo.toml
@@ -20,7 +20,6 @@ openvm-rv32im-circuit = { workspace = true }
 openvm-rv32im-transpiler = { workspace = true }
 openvm-native-compiler = { workspace = true }
 
-
 strum.workspace = true
 itertools.workspace = true
 derive-new.workspace = true
@@ -41,7 +40,7 @@ test-log = { workspace = true }
 
 [features]
 default = ["parallel", "jemalloc", "tco"]
-tco = ["openvm-circuit/tco"]
+tco = ["openvm-rv32im-circuit/tco"]
 jemalloc = ["openvm-circuit/jemalloc"]
 parallel = ["openvm-circuit/parallel"]
 test-utils = ["openvm-circuit/test-utils"]
