--- a/extensions/sha256/circuit/Cargo.toml
+++ b/extensions/sha256/circuit/Cargo.toml
@@ -30,7 +30,7 @@ openvm-circuit = { workspace = true, features = ["test-utils"] }
 
 [features]
 default = ["parallel", "jemalloc", "tco"]
-tco = ["openvm-circuit/tco"]
+tco = ["openvm-rv32im-circuit/tco"]
 parallel = ["openvm-circuit/parallel"]
 test-utils = ["openvm-circuit/test-utils"]
 # performance features:
