--- a/extensions/keccak256/circuit/Cargo.toml
+++ b/extensions/keccak256/circuit/Cargo.toml
@@ -22,6 +22,7 @@ p3-keccak-air = { workspace = true }
 
 strum.workspace = true
 tiny-keccak.workspace = true
+xkcp-rs = "0.0.5"
 itertools.workspace = true
 derive-new.workspace = true
 derive_more = { workspace = true, features = ["from"] }
