--- a/benchmarks/execute/Cargo.toml
+++ b/benchmarks/execute/Cargo.toml
@@ -43,6 +43,7 @@ tracing-subscriber.workspace = true
 
 [dev-dependencies]
 divan = { package = "codspeed-divan-compat", version = "3.0.2" }
+test-case.workspace = true
 
 [features]
 default = ["jemalloc"]
