--- a/extensions/bigint/circuit/Cargo.toml
+++ b/extensions/bigint/circuit/Cargo.toml
@@ -10,6 +10,8 @@ repository.workspace = true
 [dependencies]
 openvm-stark-backend = { workspace = true }
 openvm-stark-sdk = { workspace = true }
+openvm-cuda-backend = { workspace = true, optional = true }
+openvm-cuda-common = { workspace = true, optional = true }
 openvm-circuit-primitives = { workspace = true }
 openvm-circuit-primitives-derive = { workspace = true }
 openvm-circuit = { workspace = true }
@@ -32,12 +34,25 @@ openvm-rv32-adapters = { workspace = true, features = ["test-utils"] }
 test-case.workspace = true
 alloy-primitives = { version = "1.2.1" }
 
+[build-dependencies]
+openvm-cuda-builder = { workspace = true, optional = true }
+
 [features]
 default = ["parallel", "jemalloc"]
 parallel = ["openvm-circuit/parallel"]
 test-utils = ["openvm-circuit/test-utils"]
+
 # performance features:
 mimalloc = ["openvm-circuit/mimalloc"]
 jemalloc = ["openvm-circuit/jemalloc"]
 jemalloc-prof = ["openvm-circuit/jemalloc-prof"]
 nightly-features = ["openvm-circuit/nightly-features"]
+
+cuda = [
+    "dep:openvm-cuda-builder",
+    "dep:openvm-cuda-common",
+    "dep:openvm-cuda-backend",
+    "openvm-circuit-primitives/cuda",
+    "openvm-circuit/cuda",
+    "openvm-rv32im-circuit/cuda",
+]
