--- a/extensions/sha256/circuit/Cargo.toml
+++ b/extensions/sha256/circuit/Cargo.toml
@@ -34,7 +34,7 @@ openvm-circuit = { workspace = true, features = ["test-utils"] }
 openvm-cuda-builder = { workspace = true, optional = true }
 
 [features]
-default = ["parallel", "jemalloc", "cuda"]
+default = ["parallel", "jemalloc"]
 parallel = ["openvm-circuit/parallel"]
 test-utils = ["openvm-circuit/test-utils"]
 
@@ -50,5 +50,5 @@ cuda = [
     "dep:openvm-cuda-backend",
     "openvm-circuit-primitives/cuda",
     "openvm-circuit/cuda",
-    # "openvm-rv32im-circuit/cuda",
+    "openvm-rv32im-circuit/cuda",
 ]
