--- a/crates/vm/derive/Cargo.toml
+++ b/crates/vm/derive/Cargo.toml
@@ -14,3 +14,6 @@ syn = { version = "2.0", features = ["parsing", "full"] }
 quote = "1.0"
 proc-macro2 = "1.0"
 itertools = { workspace = true }
+
+[features]
+tco = []
