--- a/extensions/algebra/circuit/Cargo.toml
+++ b/extensions/algebra/circuit/Cargo.toml
@@ -7,11 +7,6 @@ edition.workspace = true
 homepage.workspace = true
 repository.workspace = true
 
-[features]
-default = ["jemalloc", "tco"]
-tco = ["openvm-rv32im-circuit/tco"]
-jemalloc = ["openvm-circuit/jemalloc"]
-
 [dependencies]
 openvm-circuit-primitives = { workspace = true }
 openvm-circuit-primitives-derive = { workspace = true }
@@ -42,6 +37,10 @@ openvm-circuit = { workspace = true, features = ["test-utils"] }
 openvm-rv32-adapters = { workspace = true, features = ["test-utils"] }
 openvm-pairing-guest = { workspace = true, features = ["halo2curves"] }
 test-case = { workspace = true }
+
+[features]
+default = []
+tco = ["openvm-rv32im-circuit/tco"]
 
 [package.metadata.cargo-shear]
 ignored = ["derive_more"]
