--- a/extensions/pairing/circuit/Cargo.toml
+++ b/extensions/pairing/circuit/Cargo.toml
@@ -7,11 +7,6 @@ edition.workspace = true
 homepage.workspace = true
 repository.workspace = true
 
-[features]
-default = ["jemalloc", "tco"]
-tco = ["openvm-rv32im-circuit/tco", "openvm-ecc-circuit/tco"]
-jemalloc = ["openvm-circuit/jemalloc"]
-
 [dependencies]
 openvm-circuit-primitives = { workspace = true }
 openvm-circuit-derive = { workspace = true }
@@ -54,3 +49,7 @@ openvm-pairing-guest = { workspace = true, features = [
     "bls12_381",
     "bn254",
 ] }
+
+[features]
+default = []
+tco = ["openvm-rv32im-circuit/tco", "openvm-ecc-circuit/tco"]
