--- a/extensions/algebra/circuit/Cargo.toml
+++ b/extensions/algebra/circuit/Cargo.toml
@@ -19,6 +19,8 @@ openvm-stark-sdk = { workspace = true }
 openvm-rv32im-circuit = { workspace = true }
 openvm-rv32-adapters = { workspace = true }
 openvm-algebra-transpiler = { workspace = true }
+openvm-cuda-backend = { workspace = true, optional = true }
+openvm-cuda-common = { workspace = true, optional = true }
 
 halo2curves-axiom = { workspace = true }
 num-bigint = { workspace = true, features = ["serde"] }
@@ -38,5 +40,27 @@ openvm-rv32-adapters = { workspace = true, features = ["test-utils"] }
 openvm-pairing-guest = { workspace = true, features = ["halo2curves"] }
 test-case = { workspace = true }
 
+[build-dependencies]
+openvm-cuda-builder = { workspace = true, optional = true }
+
 [package.metadata.cargo-shear]
 ignored = ["derive_more"]
+
+[features]
+default = []
+cuda = [
+    "dep:openvm-cuda-common",
+    "dep:openvm-cuda-backend",
+    "dep:openvm-cuda-builder",
+    "openvm-circuit-primitives/cuda",
+    "openvm-mod-circuit-builder/cuda",
+    "openvm-circuit/cuda",
+    "openvm-rv32im-circuit/cuda",
+]
+touchemall = [
+    "cuda", 
+    "openvm-circuit/touchemall",
+    "openvm-circuit-primitives/touchemall",
+    "openvm-cuda-backend/touchemall",
+    "openvm-cuda-common/touchemall",
+]
