--- a/extensions/algebra/circuit/Cargo.toml
+++ b/extensions/algebra/circuit/Cargo.toml
@@ -17,6 +17,7 @@ openvm-stark-backend = { workspace = true }
 openvm-mod-circuit-builder = { workspace = true }
 openvm-stark-sdk = { workspace = true }
 openvm-rv32im-circuit = { workspace = true }
+openvm-memcpy-circuit = { workspace = true }
 openvm-rv32-adapters = { workspace = true }
 openvm-algebra-transpiler = { workspace = true }
 openvm-cuda-backend = { workspace = true, optional = true }
