--- a/guest-libs/pairing/Cargo.toml
+++ b/guest-libs/pairing/Cargo.toml
@@ -47,6 +47,7 @@ openvm-ecc-guest.workspace = true
 openvm-ecc-transpiler.workspace = true
 openvm-rv32im-transpiler.workspace = true
 openvm-memcpy-transpiler.workspace = true
+openvm-memcpy-circuit.workspace = true
 openvm = { workspace = true }
 openvm-toolchain-tests = { workspace = true }
 eyre.workspace = true
