--- a/guest-libs/keccak256/Cargo.toml
+++ b/guest-libs/keccak256/Cargo.toml
@@ -25,3 +25,6 @@ eyre = { workspace = true }
 
 [target.'cfg(not(target_os = "zkvm"))'.dependencies]
 tiny-keccak = { workspace = true }
+
+[features]
+cuda = ["openvm-keccak256-circuit/cuda"]
