--- a/extensions/ecc/circuit/Cargo.toml
+++ b/extensions/ecc/circuit/Cargo.toml
@@ -17,6 +17,9 @@ openvm-stark-backend = { workspace = true }
 openvm-algebra-circuit = { workspace = true }
 openvm-rv32-adapters = { workspace = true }
 openvm-ecc-transpiler = { workspace = true }
+openvm-cuda-backend = { workspace = true, optional = true }
+openvm-cuda-common = { workspace = true, optional = true }
+openvm-stark-sdk = { workspace = true, optional = true }
 
 num-bigint = { workspace = true }
 num-traits = { workspace = true }
@@ -39,5 +42,29 @@ openvm-circuit = { workspace = true, features = ["test-utils"] }
 openvm-rv32-adapters = { workspace = true, features = ["test-utils"] }
 lazy_static = { workspace = true }
 
+[build-dependencies]
+openvm-cuda-builder = { workspace = true, optional = true }
+
 [package.metadata.cargo-shear]
 ignored = ["rand"]
+
+[features]
+default = []
+cuda = [
+    "dep:openvm-cuda-common",
+    "dep:openvm-cuda-backend",
+    "dep:openvm-cuda-builder",
+    "dep:openvm-stark-sdk",
+    "openvm-circuit-primitives/cuda",
+    "openvm-mod-circuit-builder/cuda",
+    "openvm-circuit/cuda",
+    "openvm-algebra-circuit/cuda",
+]
+touchemall = [
+    "cuda", 
+    "openvm-circuit/touchemall",
+    "openvm-circuit-primitives/touchemall",
+    "openvm-cuda-backend/touchemall",
+    "openvm-cuda-common/touchemall",
+    "openvm-algebra-circuit/touchemall",
+]
