--- a/.github/workflows/guest-lib-tests.yml
+++ b/.github/workflows/guest-lib-tests.yml
@@ -28,21 +28,22 @@ jobs:
     strategy:
       matrix:
         crate:
-          - { name: "sha2", path: "sha2" }
-          - { name: "keccak256", path: "keccak256" }
-          - { name: "ff_derive", path: "ff_derive" }
-          - { name: "k256", path: "k256" }
-          - { name: "p256", path: "p256" }
-          - { name: "ruint", path: "ruint" }
-          - { name: "pairing", path: "pairing" }
-          - { name: "verify_stark", path: "verify_stark" }
+          - { name: "sha2", path: "sha2", family: "c7g.16xlarge", image: "ubuntu24-full-arm64" }
+          - { name: "keccak256", path: "keccak256", family: "c7g.16xlarge", image: "ubuntu24-full-arm64" }
+          - { name: "keccak256", path: "keccak256", family: "g6.2xlarge", image: "ubuntu24-gpu-x64" }
+          - { name: "ff_derive", path: "ff_derive", family: "c7g.16xlarge", image: "ubuntu24-full-arm64" }
+          - { name: "k256", path: "k256", family: "c7g.16xlarge", image: "ubuntu24-full-arm64" }
+          - { name: "p256", path: "p256", family: "c7g.16xlarge", image: "ubuntu24-full-arm64" }
+          - { name: "ruint", path: "ruint", family: "c7g.16xlarge", image: "ubuntu24-full-arm64" }
+          - { name: "pairing", path: "pairing", family: "c7g.16xlarge", image: "ubuntu24-full-arm64" }
+          - { name: "verify_stark", path: "verify_stark", family: "c7g.16xlarge", image: "ubuntu24-full-arm64" }
       # Ensure tests run in parallel even if one fails
       fail-fast: false
 
     runs-on:
       - runs-on=${{ github.run_id }}
-      - runner=64cpu-linux-arm64
-      - image=ubuntu24-full-arm64
+      - family=${{ matrix.crate.family }}
+      - image=${{ matrix.crate.image }}
       - tag=crate-${{ matrix.crate.name }}
       - extras=s3-cache
 
@@ -71,12 +72,20 @@ jobs:
           cache-on-failure: true
       - uses: taiki-e/install-action@nextest
 
+      - name: Check CUDA status and set environment variables
+        if: contains(matrix.extension.family, 'g6')
+        run: |
+          nvidia-smi
+          nvidia-smi -L
+          nvcc --version
+          echo "FEATURE_ARGS=--features=cuda" >> $GITHUB_ENV
+
       - name: Run ${{ matrix.crate.name }} guest library tests
         working-directory: guest-libs/${{ matrix.crate.path }}
         run: |
           rustup component add rust-src --toolchain nightly-2025-02-14
-          FEATURE_ARGS=""
+          PAIRING_FEATURE_ARGS=""
           if [[ "${{ matrix.crate.name }}" == "pairing" ]]; then
-            FEATURE_ARGS="--features=bn254,bls12_381"
+            PAIRING_FEATURE_ARGS="--features=bn254,bls12_381"
           fi
-          cargo nextest run --cargo-profile=fast $FEATURE_ARGS --no-tests=pass
+          cargo nextest run --cargo-profile=fast ${{ env.FEATURE_ARGS }} $PAIRING_FEATURE_ARGS --no-tests=pass
