--- a/Cargo.toml
+++ b/Cargo.toml
@@ -61,13 +61,13 @@ members = [
     "extensions/ecc/tests",
     "extensions/pairing/circuit",
     "extensions/pairing/guest",
-    "guest-libs/ff_derive/",
-    "guest-libs/k256/",
-    "guest-libs/p256/",
-    "guest-libs/keccak256/",
-    "guest-libs/pairing/",
-    "guest-libs/ruint/",
-    "guest-libs/sha2/",
+#    "guest-libs/ff_derive/",
+#    "guest-libs/k256/",
+#    "guest-libs/p256/",
+#    "guest-libs/keccak256/",
+#    "guest-libs/pairing/",
+#    "guest-libs/ruint/",
+#    "guest-libs/sha2/",
     "guest-libs/verify_stark/",
 ]
 exclude = ["crates/sdk/example", "benchmarks/guest/**"]
