--- a/guest-libs/ruint/Cargo.toml
+++ b/guest-libs/ruint/Cargo.toml
@@ -151,6 +151,7 @@ alloc = [
     "valuable?/alloc",
     "zeroize?/alloc",
 ]
+cuda = ["openvm-bigint-circuit/cuda"]
 
 # nightly-only features
 nightly = []
