--- a/guest-libs/sha2/Cargo.toml
+++ b/guest-libs/sha2/Cargo.toml
@@ -25,3 +25,6 @@ eyre = { workspace = true }
 
 [target.'cfg(not(target_os = "zkvm"))'.dependencies]
 sha2 = { workspace = true }
+
+[features]
+cuda = ["openvm-sha256-circuit/cuda"]
