--- a/.github/workflows/extension-tests.yml
+++ b/.github/workflows/extension-tests.yml
@@ -29,6 +29,7 @@ jobs:
           - { name: "rv32im", path: "rv32im", family: "c7g.16xlarge", image: "ubuntu24-full-arm64" }
           - { name: "rv32im", path: "rv32im", family: "g6.2xlarge", image: "ubuntu24-gpu-x64" }
           - { name: "native", path: "native", family: "c7g.16xlarge", image: "ubuntu24-full-arm64" }
+          - { name: "native", path: "native", family: "g6.2xlarge", image: "ubuntu24-gpu-x64" }
           - { name: "keccak256", path: "keccak256", family: "c7g.16xlarge", image: "ubuntu24-full-arm64" }
           - { name: "keccak256", path: "keccak256", family: "g6.2xlarge", image: "ubuntu24-gpu-x64" }
           - { name: "sha256", path: "sha256", family: "c7g.16xlarge", image: "ubuntu24-full-arm64" }
