--- a/extensions/native/circuit/Cargo.toml
+++ b/extensions/native/circuit/Cargo.toml
@@ -20,6 +20,10 @@ openvm-rv32im-circuit = { workspace = true }
 openvm-rv32im-transpiler = { workspace = true }
 openvm-native-compiler = { workspace = true }
 
+openvm-cuda-backend = { workspace = true, optional = true }
+openvm-cuda-common = { workspace = true, optional = true }
+
+p3-field = { workspace = true }
 
 strum.workspace = true
 itertools.workspace = true
@@ -29,6 +33,9 @@ rand.workspace = true
 eyre.workspace = true
 serde.workspace = true
 static_assertions.workspace = true
+
+[build-dependencies]
+openvm-cuda-builder = { workspace = true, optional = true }
 
 [dev-dependencies]
 openvm-stark-sdk = { workspace = true }
@@ -43,3 +50,4 @@ test-log = { workspace = true }
 default = ["parallel"]
 parallel = ["openvm-circuit/parallel"]
 test-utils = ["openvm-circuit/test-utils"]
+cuda = ["dep:openvm-cuda-backend", "dep:openvm-cuda-common", "dep:openvm-cuda-builder", "openvm-circuit-primitives/cuda", "openvm-circuit/cuda"]
