--- a/crates/sdk/Cargo.toml
+++ b/crates/sdk/Cargo.toml
@@ -95,15 +95,15 @@ nightly-features = ["openvm-circuit/nightly-features"]
 
 cuda = [
     "dep:openvm-cuda-backend",
-    # "openvm-algebra-circuit/cuda",
+    "openvm-circuit/cuda",
+    "openvm-algebra-circuit/cuda",
     "openvm-bigint-circuit/cuda",
-    # "openvm-ecc-circuit/cuda",
+    "openvm-ecc-circuit/cuda",
     "openvm-keccak256-circuit/cuda",
     "openvm-sha256-circuit/cuda",
-    # "openvm-pairing-circuit/cuda",
-    # "openvm-native-circuit/cuda",
+    "openvm-pairing-circuit/cuda",
+    "openvm-native-circuit/cuda",
     "openvm-rv32im-circuit/cuda",
-    "openvm-circuit/cuda",
 ]
 
 [[example]]
