--- a/extensions/ecc/tests/Cargo.toml
+++ b/extensions/ecc/tests/Cargo.toml
@@ -28,5 +28,5 @@ halo2curves-axiom = { workspace = true }
 [features]
 default = ["parallel"]
 parallel = ["openvm-circuit/parallel"]
-cuda = ["openvm-ecc-circuit/cuda"]
-touchemall = [ "cuda", "openvm-ecc-circuit/touchemall" ]
+cuda = ["openvm-ecc-circuit/cuda", "openvm-sdk/cuda"]
+touchemall = ["cuda", "openvm-ecc-circuit/touchemall"]
