--- a/benchmarks/prove/Cargo.toml
+++ b/benchmarks/prove/Cargo.toml
@@ -14,6 +14,7 @@ openvm-continuations.workspace = true
 openvm-sdk.workspace = true
 openvm-stark-backend.workspace = true
 openvm-stark-sdk.workspace = true
+openvm-cuda-backend = { workspace = true, optional = true }
 openvm-transpiler.workspace = true
 openvm-native-circuit.workspace = true
 openvm-native-compiler.workspace = true
@@ -45,6 +46,13 @@ mimalloc = ["openvm-sdk/mimalloc"]
 jemalloc = ["openvm-sdk/jemalloc"]
 jemalloc-prof = ["openvm-sdk/jemalloc-prof"]
 nightly-features = ["openvm-sdk/nightly-features"]
+
+cuda = [
+    "dep:openvm-cuda-backend",
+    "openvm-circuit/cuda",
+    "openvm-native-circuit/cuda",
+    "openvm-sdk/cuda",
+]
 
 [package.metadata.cargo-shear]
 ignored = ["derive_more", "rand"]
