--- a/.github/workflows/benchmarks.yml
+++ b/.github/workflows/benchmarks.yml
@@ -100,19 +100,39 @@ jobs:
               .e2e_bench as $e2e_bench |
               select($run_e2e or .e2e_bench != true) |
               .run_params[] |
-              {
-                name: $name,
-                e2e_bench: $e2e_bench,
-                features: $features,
-                id: $id,
-                instance_type: .instance_type,
-                memory_allocator: .memory_allocator,
-                app_log_blowup: .app_log_blowup,
-                leaf_log_blowup: .leaf_log_blowup,
-                root_log_blowup: (.root_log_blowup // 0),
-                internal_log_blowup: (.internal_log_blowup // 0),
-                max_segment_length: (.max_segment_length // 1048476)
-              }
+              (
+                {
+                  name: $name,
+                  e2e_bench: $e2e_bench,
+                  features: ($features | gsub("^,|,$"; "")),
+                  id: $id,
+                  family: (.cpu_family // "c7g.16xlarge"),
+                  image: "ubuntu24-full-arm64",
+                  memory_allocator: .memory_allocator,
+                  app_log_blowup: .app_log_blowup,
+                  leaf_log_blowup: .leaf_log_blowup,
+                  root_log_blowup: (.root_log_blowup // 0),
+                  internal_log_blowup: (.internal_log_blowup // 0),
+                  max_segment_length: (.max_segment_length // 1048476)
+                },
+                {
+                  name: $name,
+                  e2e_bench: $e2e_bench,
+                  features: (
+                    ($features | gsub("^,|,$"; "")) as $f
+                    | if $f == "" then "cuda" else "cuda,\($f)" end
+                  ),
+                  id: "\($id)-cuda", 
+                  family: (.gpu_family // "g6.2xlarge"),
+                  image: "ubuntu24-gpu-x64",
+                  memory_allocator: .memory_allocator,
+                  app_log_blowup: .app_log_blowup,
+                  leaf_log_blowup: .leaf_log_blowup,
+                  root_log_blowup: (.root_log_blowup // 0),
+                  internal_log_blowup: (.internal_log_blowup // 0),
+                  max_segment_length: (.max_segment_length // 1048476)
+                }
+              )
             ]
           ' ./ci/benchmark-config.json)
           if [ $? -ne 0 ]; then
@@ -130,7 +150,8 @@ jobs:
     with:
       benchmark_name: ${{ matrix.benchmark_run.name }}
       benchmark_id: ${{ matrix.benchmark_run.id }}
-      instance_type: ${{ matrix.benchmark_run.instance_type }}
+      family: ${{ matrix.benchmark_run.family }}
+      image: ${{ matrix.benchmark_run.image }}
       memory_allocator: ${{ matrix.benchmark_run.memory_allocator }}
       app_log_blowup: ${{ matrix.benchmark_run.app_log_blowup }}
       leaf_log_blowup: ${{ matrix.benchmark_run.leaf_log_blowup }}
