--- a/ci/benchmark-config.json
+++ b/ci/benchmark-config.json
@@ -7,7 +7,8 @@
       "e2e_bench": false,
       "run_params": [
         {
-          "instance_type": "64cpu-linux-arm64",
+          "cpu_family": "c7g.16xlarge",
+          "gpu_family": "g6.2xlarge",
           "memory_allocator": "jemalloc",
           "app_log_blowup": 1,
           "leaf_log_blowup": 1
@@ -21,7 +22,8 @@
       "e2e_bench": false,
       "run_params": [
         {
-          "instance_type": "64cpu-linux-arm64",
+          "cpu_family": "c7g.16xlarge",
+          "gpu_family": "g6.2xlarge",
           "memory_allocator": "jemalloc",
           "app_log_blowup": 1,
           "leaf_log_blowup": 1
@@ -35,7 +37,8 @@
       "e2e_bench": false,
       "run_params": [
         {
-          "instance_type": "64cpu-linux-arm64",
+          "cpu_family": "c7g.16xlarge",
+          "gpu_family": "g6.2xlarge",
           "memory_allocator": "jemalloc",
           "app_log_blowup": 1,
           "leaf_log_blowup": 1
@@ -49,7 +52,8 @@
       "e2e_bench": false,
       "run_params": [
         {
-          "instance_type": "64cpu-linux-arm64",
+          "cpu_family": "c7g.16xlarge",
+          "gpu_family": "g6.2xlarge",
           "memory_allocator": "jemalloc",
           "app_log_blowup": 1,
           "leaf_log_blowup": 1
@@ -63,7 +67,8 @@
       "e2e_bench": false,
       "run_params": [
         {
-          "instance_type": "64cpu-linux-arm64",
+          "cpu_family": "c7g.16xlarge",
+          "gpu_family": "g6.2xlarge",
           "memory_allocator": "jemalloc",
           "app_log_blowup": 1,
           "leaf_log_blowup": 1
@@ -77,7 +82,8 @@
       "e2e_bench": true,
       "run_params": [
         {
-          "instance_type": "64cpu-linux-arm64",
+          "cpu_family": "c7g.16xlarge",
+          "gpu_family": "g6.2xlarge",
           "memory_allocator": "jemalloc",
           "app_log_blowup": 1,
           "leaf_log_blowup": 1,
@@ -94,7 +100,8 @@
       "e2e_bench": true,
       "run_params": [
         {
-          "instance_type": "64cpu-linux-arm64",
+          "cpu_family": "c7g.16xlarge",
+          "gpu_family": "g6.2xlarge",
           "memory_allocator": "jemalloc",
           "app_log_blowup": 1,
           "leaf_log_blowup": 1,
